# khr3hv

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README  README.md  original_readme copy.md  rcb4.c
cmake/: FindFTDI.cmake  FindLIBUSB.cmake
cython/: ckondo.pxd  free-hold.py  khr.py  move.py  play_motion.py  pykondo.cpp  pykondo.pyx  readme  run_motion.py  setup.py
docs/: kondo-khr_joints_id.odp  kondo-khr_joints_id.pptx
include/: .kondo.h.swp  ics.h  kondo.h  rcb4.h
java/: ExamplePlayMotion.java  Makefile  README  kondo.i
kondo_softwares/: README.md
kondo_softwares/HTH4V220Beta/HeartToHeart4 Ver.2.2 Beta/: KrcShortcutKey.xml
kondo_softwares/HTH4V220Beta/HeartToHeart4 Ver.2.2 Beta/ToolBox/: Thumbs.db
kondo_softwares/HTH4V220Beta/Hello_KHR3(V2.0)_English/: HLO001_Greeting.xml  HLO002_HomePosition(Hello_KHR3).xml  HLO003_Waving.xml  HLO004_Encouragement.xml  HLO005_Chagrined.xml  HLO006_Handstand.xml  HLO007_Clapping(Build M40).xml  HLO008_Clapping(Call M40 at 10 times).xml  HLO009_Clap the Rhythm(Call M40).xml  HLO010_Push-Up(10 times).xml  HLO011_One Leg Bend and Stretch(5 times).xml  HLO012_Rabbit Jump A(3 times).xml  HLO013_Rabbit Jump B(3 times).xml  HLO014_Get Up(Stomach).xml  HLO015_Get Up(Face up).xml  HLO016_Safty Walk(Forward, 5 steps).xml  HLO017_Safty Walk(Backward, 5 steps).xml  HLO018_Safty Step(Left, 5 steps).xml  HLO019_Safty Step(Right, 5 steps).xml  HLO020_Fast Turn A(Left, 5 times).xml  HLO021_Fast Tuen A(Right 5 times).xml  HLO022_Walk A(Forward, 5 steps).xml  HLO023_Walk A(Backward, 5 steps).xml  HLO024_Side Step A(Left, 5 steps).xml  HLO025_Side Step A(Right, 5 steps).xml  HLO026_Kick Forward(Left Leg).xml  HLO027_Kick Forward(Right Leg).xml  HLO028_Side Kick(Left Leg).xml  HLO029_Side Kick(Right Leg).xml  HLO030_Kick Backward(Left Leg).xml  HLO031_Kick Backward(Right Leg).xml  HLO036_Lay On The Stomack.xml  HLO037_Lay On The Back.xml  HLO038_Side Punch A(Left).xml  HLO039_Side Punch A(Right).xml  Hello_KHR3(V2.0)_English.h4p  PA Mixing Example.xml
kondo_softwares/HTH4V220Beta/Hello_KHR3(V2.0)_English/For RadioControl/: HLO016RC_Safty Walk(Forward)Wireless.xml  HLO017RC_Safty Walk(Backward)Wireless.xml  HLO018RC_Safty Side Step(Left)Wireless.xml  HLO019RC_Safty Side Step(Right)Wireless.xml  HLO020RC_Fast Turn A(Left)Wireless.xml  HLO021RC_Fast Tuen A(Right)Wireless.xml  HLO022RC_Walk A(Forward)Wireless(Another).xml  HLO022RC_Walk A(Forward)Wireless.xml  HLO023RC_Walk A(Backward)Wireless.xml  HLO024RC_Side Step A(Left)Wireless.xml  (+5 more)
kondo_softwares/ICS3.5Manager1003/: KRS-4031HV.sdt  KRS-4034HV.sdt  initial.mgr
kondo_softwares/KO_Driver2015/KO_Driver2015/: KODriverBus.inf  KODriverPort.inf  ftdibus.cat  ftdiport.cat
kondo_softwares/RCB4RefSetV220R20140507/: ÇÕÇ∂ÇﬂÇ…Ç®ì«Ç›Ç≠ÇæÇ≥Ç¢.txt
kondo_softwares/RCB4RefSetV220R20140507/DLLÉtÉ@ÉCÉã/: Extensions.chm  Rcb4.chm
pcb/: README
pcb/ftdi2kondo/: ftdi2kondo2.brd  ftdi2kondo2.sch
pcb/usb2kondo/: usb2kondo.brd  usb2kondo.sch
python/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  README  pykondo.i  run_motion.py
serial/: README  serial.c  serial.h
src/: ics.c  kondo.cpp  rcb4.c  rcb4.cpp
urdf/: khr.urdf
utils/: Dependencies  Makefile  run_motion.c  run_motion.cpp  test_analog.cpp  test_digital.cpp  test_ics.cpp  test_kondo_move.cpp  test_kondo_set_angle.cpp  test_kondo_set_angles.cpp
wii/: Makefile  wii.c
(+764 files in other folders)
